refactor: improve query safety and menu initialization